/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 */
package com.alejandro.main;


/**
 *
 * @author jalm2
 */
public class RestauranteMain {

    public static void main(String[] args) {
        GestorRestaurante.iniciar();
    }
}
